blue-green-app/active-vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: active-vs
spec:
  gateways:
    - istio-istio-gateway.default.svc.cluster.local
  hosts:
    - active.cotest.softwarization.net
  http:
    - route:
        - destination:
            host: rollout-bluegreen-active.blue-green.svc.cluster.local
            port:
              number: 80
      timeout: 30s
