blue-green-app/preview-vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: preview-vs
spec:
  gateways:
    - istio-istio-gateway.default.svc.cluster.local
  hosts:
    - preview.cotest.softwarization.net
  http:
    - route:
        - destination:
            host: rollout-bluegreen-preview.blue-green.svc.cluster.local
            port:
              number: 80
      timeout: 30s
